--- a/HassFramework.xcodeproj/xcshareddata/xcschemes/HassWatchFramework.xcscheme
+++ b/HassFramework.xcodeproj/xcshareddata/xcschemes/HassWatchFramework.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1510"
+   LastUpgradeVersion = "1520"
    version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "D00BF6102AC9F85C00B7C307"
-               BuildableName = "HassFramework.framework"
-               BlueprintName = "HassFramework"
+               BlueprintIdentifier = "D036102D2B607066001CFE29"
+               BuildableName = "HassWatchFramework.framework"
+               BlueprintName = "HassWatchFramework"
                ReferencedContainer = "container:HassFramework.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -49,9 +49,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "D00BF6102AC9F85C00B7C307"
-            BuildableName = "HassFramework.framework"
-            BlueprintName = "HassFramework"
+            BlueprintIdentifier = "D036102D2B607066001CFE29"
+            BuildableName = "HassWatchFramework.framework"
+            BlueprintName = "HassWatchFramework"
             ReferencedContainer = "container:HassFramework.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
